Zweiter Commit: Netzwerkstruktur komplett überarbeitet. Absofort wird es einen Server geben der zukünftig auf einem 24/7 Ubuntu-Server gehostet wird der auf Clienten wartet und sie zu Spielen verbindet.
Dazu wurde das Github-Projekt SimpleServerClient für die verinfachung des Netzwerkttraffics über Gradle eingebunden und in einer ersten Umsetzung in einem einfachen Server und Client implementiert. Der Datenaustausch ist bislang ungetestet und die erste MethodID (Initilisation) ist noch fertig ausimplementiert. Die auszutauschenden Daten PlayerData stehen schon genauso wie eine Umsetzung eines SecurityToken handlings, das die Kommunikation sicherer gestalten soll und die Identität der Spieler beibehalten/sicherstellen soll.

--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
+    implementation 'com.github.DeBukkIt:SimpleServerClient:2.4.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
